Update contact page with flag background

--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Flour & Crust</title>
 </head>
-<body>
+<body style="background: linear-gradient(135deg, #007749 0%, #007749 20%, #fff 20%, #444 40%, #444 60%, #de3831 60%, #de3831 80%, #ffb915 80%, #ffb915 100%);">
     <header>
-        <nav>
+        <nav style="text-align: left;">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="products.html">Products</a>
@@ -16,13 +16,15 @@
         </nav>
     </header>
     
-    <main>
+    <main style="text-align: center;">
         <h1>Find Us</h1>
-        <p>Address: 123 Bakery Street, Cape Town</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211871.78928007642!2d18.13635568671876!3d-33.92835069999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc677cfe711e1f%3A0x67a5c60940b53014!2sCharly&#39;s%20Bakery!5e0!3m2!1sen!2snl!4v1756155873173!5m2!1sen!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>Hours: Mon-Fri 7am-5pm, Sat 8am-2pm</p>
+        <p>Contact Number: 021 123 4567</p>
+        <p>Email: <a href="mailto:ST10493304@vcconnect.edu.za">ST10493304@vcconnect.edu.za</a></p>
     </main>
 
-    <footer>
+    <footer style="text-align: center;">
         <p>&copy; 2025 Flour & Crust Bakery</p>
     </footer>
 </body>
