--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Flour & Crust Artisan Bakery</title>
 </head>
-<body>
+<body bgcolor="#87ceeb">
     <header>
         <nav>
             <a href="index.html">Home</a>
@@ -16,13 +16,33 @@
         </nav>
     </header>
     
-    <main>
+    <main align="center">
         <h1>Welcome to Flour & Crust</h1>
-        <p>Artisan bakery in Cape Town</p>
-        <img src="images/hero-bakery.jpg" alt="Fresh baked bread" width="600">
+        <p><strong>Artisan bakery in Cape Town</strong></p>
+        <img src="images/bakery-worker.jpg.png" alt="Flour-Crust Bakery" width="400">
+        <h2>Freshly Baked Every Day</h2>
+        <p>
+            Discover the taste of tradition with our handcrafted breads, pastries, and cakes.<br>
+            We use only the finest local ingredients and bake everything fresh each morning.
+        </p>
+        <h2>Why Choose Us?</h2>
+        <ul style="display: inline-block; text-align: left;">
+            <li>Wide variety of breads, cakes, and pastries</li>
+            <li>Friendly staff and cozy atmosphere</li>
+            <li>Custom orders for special occasions</li>
+            <li>Eco-friendly packaging</li>
+        </ul>
+        <h2>Visit Us Today!</h2>
+        <p>
+            <strong>Address:</strong> 123 Bakery Lane, Cape Town<br>
+            <strong>Hours:</strong> Mon-Fri 7am-5pm, Sat 8am-2pm<br>
+            <strong>Contact:</strong> 021 123 4567 | 
+            <a href="mailto:ST10493304@vcconnect.edu.za">ST10493304@vcconnect.edu.za</a>
+        </p>
+        <p><em>Follow us for daily specials and new treats!</em></p>
     </main>
 
-    <footer>
+    <footer align="center">
         <p>&copy; 2025 Flour & Crust Bakery</p>
     </footer>
 </body>
