--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Flour & Crust</title>
 </head>
-<body>
+<body bgcolor="#f8e8d2">
     <header>
-        <nav>
+        <nav style="text-align: left;">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="products.html">Products</a>
@@ -16,13 +16,28 @@
         </nav>
     </header>
     
-    <main>
+    <main style="text-align: center;">
         <h1>About Flour & Crust</h1>
-        <p>We are a family-run artisan bakery in Cape Town since 2016.</p>
-        <p>Our mission is to deliver fresh, wholesome baked goods using traditional techniques.</p>
+        <img src="images/bakery-interior.jpg.png" alt="Round piece of dough being rolled out on a wooden board with a rolling pin nearby, flour scattered on the board and dark countertop, calm and focused baking atmosphere" width="400">
+        <p><strong>Welcome to Flour & Crust!</strong></p>
+        <p>Established in 2016, Flour & Crust is a family-run artisan bakery located in the heart of Cape Town. We are passionate about crafting delicious breads, pastries, and cakes using traditional techniques and the finest local ingredients.</p>
+        <h2>Our Values</h2>
+        <ul style="display: inline-block; text-align: left;">
+            <li><strong>Quality:</strong> Every product is made fresh daily with care.</li>
+            <li><strong>Community:</strong> We support local farmers and suppliers.</li>
+            <li><strong>Creativity:</strong> Our bakers love experimenting with new recipes and flavors.</li>
+            <li><strong>Sustainability:</strong> We use eco-friendly packaging and minimize food waste.</li>
+        </ul>
+        <h2>Meet Our Team</h2>
+        <p>Our skilled bakers and friendly staff are dedicated to making your visit memorable. Whether you’re picking up your morning loaf or ordering a custom cake, we’re here to help!</p>
+        <h2>Why Choose Us?</h2>
+        <p>From classic sourdough to decadent pastries, our menu offers something for everyone. We believe in honest baking and warm hospitality.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/62iPpogSueA" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p><em>Visit us and taste the difference!</em></p>
     </main>
 
-    <footer>
+    <footer style="text-align: center;">
         <p>&copy; 2025 Flour & Crust Bakery</p>
     </footer>
 </body>
