Add complete multi-page website: homepage, about, products, contact pages with enhanced functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flour Crust - Artisan Bakery</title>
     <link rel="stylesheet" href="styles.css">
+    <script>
+        // Redirect to homepage
+        window.location.href = 'homepage.html';
+    </script>
 </head>
 <body>
     <header>
