--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Flour & Crust</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body bgcolor="#f8e8d2">
     <header>
