--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Flour & Crust</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background: linear-gradient(135deg, #007749 0%, #007749 20%, #fff 20%, #444 40%, #444 60%, #de3831 60%, #de3831 80%, #ffb915 80%, #ffb915 100%);">
     <header>
