--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Flour & Crust Artisan Bakery</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body bgcolor="#87ceeb">
     <header>
