--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Products - Flour & Crust</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body bgcolor="#90ee90">
     <header>
