✨ Add stunning modern styling: gradients, animations, glass effects, and enhanced UX

--- a/homepage.html
+++ b/homepage.html
@@ -7,74 +7,76 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="modern-nav">
         <nav>
             <div class="logo">
-                <h1>Flour Crust</h1>
+                <h1 class="gradient-text glow-text float-animation">Flour Crust</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="homepage.html" class="active">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="enquiry.html">Enquiry</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="homepage.html" class="active nav-item">Home</a></li>
+                <li><a href="about.html" class="nav-item">About</a></li>
+                <li><a href="products.html" class="nav-item">Products</a></li>
+                <li><a href="enquiry.html" class="nav-item">Enquiry</a></li>
+                <li><a href="contact.html" class="nav-item">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>Welcome to Flour Crust</h2>
-                <p>Your premier destination for artisan breads, pastries, and specialty baked goods.</p>
+        <section class="hero gradient-sunset parallax-bg">
+            <div class="hero-content fade-in-up">
+                <h2 class="modern-heading glow-text">Welcome to Flour Crust</h2>
+                <p class="subheading">Your premier destination for artisan breads, pastries, and specialty baked goods.</p>
                 <div class="hero-buttons">
-                    <a href="products.html" class="cta-button">View Our Products</a>
-                    <a href="about.html" class="cta-button secondary">Learn About Us</a>
+                    <a href="products.html" class="btn-modern pulse-animation">View Our Products</a>
+                    <a href="about.html" class="btn-modern">Learn About Us</a>
                 </div>
             </div>
         </section>
 
         <section class="featured">
             <div class="container">
-                <h2>Featured Items</h2>
+                <h2 class="modern-heading gradient-text">Featured Items</h2>
+                <div class="section-divider"></div>
                 <div class="featured-grid">
-                    <div class="featured-item">
-                        <img src="images/sourdough.svg" alt="Sourdough Bread">
+                    <div class="featured-item modern-card hover-scale fade-in-up">
+                        <img src="images/sourdough.svg" alt="Sourdough Bread" class="rotate-on-hover">
                         <div class="featured-content">
-                            <h3>Artisan Sourdough</h3>
+                            <h3 class="gradient-text">Artisan Sourdough</h3>
                             <p>Our signature sourdough bread, fermented for 24 hours for the perfect tang and texture.</p>
-                            <a href="products.html#sourdough" class="learn-more">Learn More</a>
+                            <a href="products.html#sourdough" class="btn-modern">Learn More</a>
                         </div>
                     </div>
-                    <div class="featured-item">
-                        <img src="images/croissants.svg" alt="Fresh Croissants">
+                    <div class="featured-item modern-card hover-scale fade-in-up">
+                        <img src="images/croissants.svg" alt="Fresh Croissants" class="rotate-on-hover">
                         <div class="featured-content">
-                            <h3>Buttery Croissants</h3>
+                            <h3 class="gradient-text">Buttery Croissants</h3>
                             <p>Flaky, golden croissants made with real French butter and traditional lamination techniques.</p>
-                            <a href="products.html#croissants" class="learn-more">Learn More</a>
+                            <a href="products.html#croissants" class="btn-modern">Learn More</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="why-choose-us">
+        <section class="why-choose-us gradient-cool">
             <div class="container">
-                <h2>Why Choose Flour Crust?</h2>
+                <h2 class="modern-heading glow-text">Why Choose Flour Crust?</h2>
+                <div class="section-divider"></div>
                 <div class="reasons-grid">
-                    <div class="reason">
-                        <div class="reason-icon">🌾</div>
-                        <h3>Premium Ingredients</h3>
+                    <div class="reason modern-card glass-effect hover-scale fade-in-up">
+                        <div class="reason-icon pulse-animation">🌾</div>
+                        <h3 class="gradient-text">Premium Ingredients</h3>
                         <p>We source only the finest organic flours and natural ingredients for our baked goods.</p>
                     </div>
-                    <div class="reason">
-                        <div class="reason-icon">👨‍🍳</div>
-                        <h3>Master Bakers</h3>
+                    <div class="reason modern-card glass-effect hover-scale fade-in-up">
+                        <div class="reason-icon pulse-animation">👨‍🍳</div>
+                        <h3 class="gradient-text">Master Bakers</h3>
                         <p>Our experienced bakers bring decades of traditional and modern baking expertise.</p>
                     </div>
-                    <div class="reason">
-                        <div class="reason-icon">🕐</div>
-                        <h3>Fresh Daily</h3>
+                    <div class="reason modern-card glass-effect hover-scale fade-in-up">
+                        <div class="reason-icon pulse-animation">🕐</div>
+                        <h3 class="gradient-text">Fresh Daily</h3>
                         <p>Everything is baked fresh every morning using time-tested recipes and techniques.</p>
                     </div>
                     <div class="reason">
