🎯 Complete website fixes: darker text, original photos, fixed YouTube video, proper header positioning

--- a/homepage.html
+++ b/homepage.html
@@ -40,7 +40,7 @@
                 <div class="section-divider"></div>
                 <div class="featured-grid">
                     <div class="featured-item modern-card hover-scale fade-in-up">
-                        <img src="images/sourdough.svg" alt="Sourdough Bread" class="rotate-on-hover">
+                        <img src="images/sourdough loaves.jpg.png" alt="Sourdough Bread" class="rotate-on-hover">
                         <div class="featured-content">
                             <h3 class="gradient-text">Artisan Sourdough</h3>
                             <p>Our signature sourdough bread, fermented for 24 hours for the perfect tang and texture.</p>
