🥐 Enhanced croissant section on homepage with better styling and description

--- a/about.html
+++ b/about.html
@@ -37,14 +37,24 @@
             </div>
             
             <div class="modern-card glass-effect hover-scale fade-in-up">
-                <h2 class="gradient-text">Our Values</h2>
-                <div class="section-divider"></div>
-                <ul class="subheading" style="text-align: left; max-width: 600px; margin: 0 auto;">
-                    <li><strong>Quality:</strong> Every product is made fresh daily with care.</li>
-                    <li><strong>Community:</strong> We support local farmers and suppliers.</li>
-                    <li><strong>Creativity:</strong> Our bakers love experimenting with new recipes and flavors.</li>
-                    <li><strong>Sustainability:</strong> We use eco-friendly packaging and minimize food waste.</li>
-                </ul>
+                <div style="display: flex; align-items: flex-start; gap: 2rem; flex-wrap: wrap; justify-content: center;">
+                    <div style="flex: 1; min-width: 300px;">
+                        <h2 class="gradient-text">Our Values</h2>
+                        <div class="section-divider"></div>
+                        <ul class="subheading" style="text-align: left; max-width: 600px; margin: 0 auto;">
+                            <li><strong>Quality:</strong> Every product is made fresh daily with care.</li>
+                            <li><strong>Community:</strong> We support local farmers and suppliers.</li>
+                            <li><strong>Creativity:</strong> Our bakers love experimenting with new recipes and flavors.</li>
+                            <li><strong>Sustainability:</strong> We use eco-friendly packaging and minimize food waste.</li>
+                        </ul>
+                    </div>
+                    <div style="flex: 0 0 150px;">
+                        <img src="images/vanilla slice.jpg.png" alt="Delicious vanilla custard slice with golden pastry layers and smooth custard filling" 
+                             style="width: 150px; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); transition: transform 0.3s ease;" 
+                             onmouseover="this.style.transform='scale(1.05)'" 
+                             onmouseout="this.style.transform='scale(1)'">
+                    </div>
+                </div>
             </div>
             
             <div class="modern-card glass-effect hover-scale fade-in-up">
