--- a/homepage.html
+++ b/homepage.html
@@ -48,10 +48,10 @@
                         </div>
                     </div>
                     <div class="featured-item modern-card hover-scale fade-in-up">
-                        <img src="images/croissants.svg" alt="Fresh Croissants" class="rotate-on-hover">
+                        <img src="images/croissants.svg" alt="Fresh Golden Croissants" class="rotate-on-hover" style="border-radius: 12px; object-fit: cover;">
                         <div class="featured-content">
-                            <h3 class="gradient-text">Buttery Croissants</h3>
-                            <p>Flaky, golden croissants made with real French butter and traditional lamination techniques.</p>
+                            <h3 class="gradient-text">Fresh Buttery Croissants</h3>
+                            <p>Golden, flaky croissants made with premium French butter and traditional lamination techniques. Baked fresh every morning.</p>
                             <a href="products.html#croissants" class="btn-modern">Learn More</a>
                         </div>
                     </div>
