🥐 Replace croissant SVG with actual puff pastry photo on homepage

--- a/homepage.html
+++ b/homepage.html
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="featured-item modern-card hover-scale fade-in-up">
-                        <img src="images/croissants.svg" alt="Fresh Golden Croissants" class="rotate-on-hover" style="border-radius: 12px; object-fit: cover;">
+                        <img src="images/layered puff pastry.png.png" alt="Fresh Golden Croissants" class="rotate-on-hover" style="border-radius: 12px; object-fit: cover; width: 100%; height: 200px;">
                         <div class="featured-content">
                             <h3 class="gradient-text">Fresh Buttery Croissants</h3>
                             <p>Golden, flaky croissants made with premium French butter and traditional lamination techniques. Baked fresh every morning.</p>
