--- a/about.html
+++ b/about.html
@@ -68,13 +68,14 @@
                 <div class="section-divider"></div>
                 <p class="subheading">From classic sourdough to decadent pastries, our menu offers something for everyone. We believe in honest baking and warm hospitality.</p>
                 
-                <div style="margin: 2rem 0; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                <div style="margin: 2rem 0; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px; box-shadow: 0 8px 32px rgba(0,0,0,0.2);">
                     <iframe 
-                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 15px;" 
-                        src="https://www.youtube.com/embed/62iPpogSueA?rel=0&modestbranding=1&showinfo=0" 
-                        title="Flour Crust Bakery - Behind the Scenes" 
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; border-radius: 15px;" 
+                        src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=example&rel=0&modestbranding=1&showinfo=0&controls=1" 
+                        title="Flour Crust Bakery - Artisan Baking Process" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin"
                         allowfullscreen>
                     </iframe>
                 </div>
